[desktop-pwas] Stop adding page favicons to bookmark apps with manifests.

This CL stops the BookmarkAppHelper from loading favicon.ico files into
bookmark apps if the apps have a manifest since the manifest should have
exact control over what icons the bookmark app uses.

Bug: 768285
Change-Id: Ia89ace42a70d40b7134d6ec09c86bfe2a6f25bcb
Reviewed-on: https://chromium-review.googlesource.com/683855
Commit-Queue: calamity <calamity@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505933}
Former-commit-id: 07f7db8c5961ad7f839363951959f72dfd1a23c4